# relic

./: README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
scripts/rsl_rl/: play.py  train.py
source/relic/relic/actuators/: actuator_spot.py
